--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This is my small and insignificant backup for VIM.
-
-Soon I gonna add more info, and goodness...I'm a total n00b =}
+My config files for vim.
